Don't crash when copying a folder into itself.

BUG: 271808